<?xml version="1.0"?>
<package format="2">

  <name>baxter_imagination</name>

  <version>0.0.1</version>

  <description>
    Simulates objects captured by Baxter's camera in 3D using OpenCV and Bullet.
  </description>

  <maintainer email="dabbour@sabanciuniv.edu">Abdul Rahman Dabbour</maintainer>

  <url type="repository">https://github.com/ardabbour/baxter-imagination</url>
  <url type="bugtracker">https://github.com/ardabbour/baxter-imagination/issues</url>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
