<?xml version="1.0"?>
<package format="2">

  <name>easy_baxter</name>

  <version>0.0.1</version>

  <description>
    Simulates objects captured by Baxter's camera in 3D using OpenCV and Bullet.
  </description>

  <maintainer email="dabbour@sabanciuniv.edu">Abdul Rahman Dabbour</maintainer>

  <url type="repository">https://github.com/ardabbour/easy-baxter</url>
  <url type="bugtracker">https://github.com/ardabbour/easy-baxter/issues</url>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>baxter_interface</exec_depend>

</package>
